fix: popover dark mode colors bootstrap fix

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -90,6 +90,8 @@
   $input-group-addon-bg: var(--color-light-gray);
   $modal-content-bg: var(--color-light);
   $modal-header-border-color: var(--color-light-gray);
+  $popover-bg: #1c1c1e; // fix static color bootstrap issue
+  $popover-body-color: var(--body-color);
   $table-color: var(--body-color);
   $table-border-color: var(--color-medium-gray);
   $table-accent-bg: var(--color-medium-gray);
@@ -127,6 +129,7 @@
   @import '~bootstrap/scss/input-group';
   @import '~bootstrap/scss/mixins/table-row';
   @import '~bootstrap/scss/modal';
+  @import '~bootstrap/scss/popover';
   @import '~bootstrap/scss/tables';
   @import '~bootstrap/scss/tooltip';
   @import '../../node_modules/bootstrap-vue/src/variables';
